--- a/src/app/pages/sale/form/form.component.html
+++ b/src/app/pages/sale/form/form.component.html
@@ -31,7 +31,7 @@
             <span>Dirección</span>
           </ng-template>
           <section *ngIf="cdkStepper.selectedIndex === 1" role="tabpanel">
-            <div class="w-100">
+            <div class="card card-body border border-primary rounded">
               <app-form-sale-installation></app-form-sale-installation>
             </div>
             <ul class="list-inline wizard d-flex justify-content-end mb-0 mt-2">
