--- a/src/app/pages/sale/tables/table-sale-detail/table-sale-detail.component.html
+++ b/src/app/pages/sale/tables/table-sale-detail/table-sale-detail.component.html
@@ -1,6 +1,6 @@
 <div class="card border border-info shadow-lg">
   <div class="card-body">
-    <span class="badge bagde-info bg-info text-uppercase fs-6 mb-3">{{data?.tipo_servicios_nombre}}</span>
+    <!-- <span class="badge bagde-info bg-info text-uppercase fs-6 mb-3">{{data?.tipo_servicios_nombre}}</span>
 
     <div class="row g-2 mb-3">
       <strong class="text-primary">Servicio</strong>
@@ -13,7 +13,7 @@
       <div class="col-md-3 d-flex flex-wrap column-gap-2 justify-content-start align-items-start mb-1">
         <strong>Observación:</strong><span>{{saleDetail?.observacion}}</span>
       </div>
-    </div>
+    </div> -->
 
     <div *ngIf="typeService?.includes('mobile')">
       <div class="row g-2 mb-3">
