--- a/src/app/pages/sale/forms/form-client/form-client-bank-account/form-array-bank-account/form-array-bank-account.component.html
+++ b/src/app/pages/sale/forms/form-client/form-client-bank-account/form-array-bank-account/form-array-bank-account.component.html
@@ -44,7 +44,7 @@
 
           <div class="col-md-3 mb-3 d-flex align-items-center" *ngIf="'FORMS.FIELD_NAMES.is_primary.label' | translate as translatedLabel;">
             <!-- <label for="fi.get('is_primary')" class="form-label">{{translatedLabel}}</label> -->
-            <div class="form-check form-check-info">
+            <div class="form-check form-check-success">
               <input class="form-check-input" type="checkbox" id="is_primary{{i}}_bank_account" formControlName="is_primary" [ngClass]="{ 'is-invalid': fi.get('is_primary').errors && (fi.get('is_primary').dirty || fi.get('is_primary').touched || submitted) }">
               <label class="form-check-label" for="is_primary{{i}}_bank_account">
                 {{translatedLabel}}
