--- a/src/app/pages/sale/forms/form-client/form-client.component.html
+++ b/src/app/pages/sale/forms/form-client/form-client.component.html
@@ -61,25 +61,18 @@
 
 <!-- PERSONA -->
 <div *ngIf="!legalPerson">
-  <app-form-person [data]="dataPerson" [hiddenButtons]="true" (submit)="onDataPerson($event)"></app-form-person>
+  <app-form-person #formPerson [submitted]="submittedClient" [data]="dataPerson" [hiddenButtons]="true" (submit)="onDataPerson($event)"></app-form-person>
 </div>
 
 <!-- EMPRESA -->
 <div *ngIf="legalPerson">
-  <app-form-company [data]="dataCompany" [hiddenButtons]="true" (submit)="onDataCompany($event)"></app-form-company>
+  <app-form-company #formCompany [submitted]="submittedClient" [data]="dataCompany" [hiddenButtons]="true" (submit)="onDataCompany($event)"></app-form-company>
 </div>
 
 
 <div class="mb-3">
-  <app-form-array-bank-account [data]="shareBankAccounts" (submit)="onDataBankAccount($event)"></app-form-array-bank-account>
+  <app-form-array-bank-account #formBankAccount [submitted]="submittedClient"  [data]="shareBankAccounts" (submit)="onDataBankAccount($event)"></app-form-array-bank-account>
 </div>
-
-<!-- DATOS ADICIONALES -->
-<!-- <accordion [isAnimated]="true" [closeOthers]="true">
-  <accordion-group heading="Direcciones">
-    <app-table-client-address></app-table-client-address>
-  </accordion-group>
-</accordion> -->
 
 <div class="d-flex flex-row flex-wrap gap-2 justify-content-end">
   <button type="button" class="btn btn-light" (click)="onCancel()" *ngIf="!dataPerson && !dataCompany">
